--- a/assetsEdited/css/styleEdited.css
+++ b/assetsEdited/css/styleEdited.css
@@ -28,7 +28,7 @@ body .nav-link {
   background-color: #3b5999;
 }
 #socialicons .social-linkedin {
-  background-color: #0077B5;
+  background-color: #0077b5;
 }
 #socialicons .social-google {
   background-color: #dd4b39;
@@ -51,6 +51,25 @@ body .nav-link {
 
 .no-display {
   display: none;
+}
+
+.buyContent {
+  display: none;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  background-color: black;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+.buyContent .buyDetails {
+  background-color: #fefefe;
+  padding: 20px;
+}
+.buyContent .buyDetails .closeDiv:hover,
+.buyContent .buyDetails .closeDiv:focus {
+  text-decoration: none;
+  cursor: pointer;
 }
 
 /*# sourceMappingURL=styleEdited.css.map */
