--- a/assetsEdited/scss/styleEdited.scss
+++ b/assetsEdited/scss/styleEdited.scss
@@ -1,74 +1,85 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap");
 
+body {
+  font-family: "Open Sans Condensed", sans-serif;
 
+  .nav-link {
+    font-family: "Lato", sans-serif;
+  }
+}
 
+#socialicons {
+  list-style: none;
+  display: flex;
 
-
- body{
-    font-family: 'Open Sans Condensed', sans-serif;
-
-    .nav-link{
-        font-family: 'Lato', sans-serif;
-    }
- }
-
- #socialicons{
-    list-style: none;
+  .social-icon {
+    height: 40px;
+    width: 40px;
     display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    font-size: 20px;
+    margin-right: 20px;
+    cursor: pointer;
+  }
 
-    .social-icon {
-        height: 40px;
-        width: 40px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        color: #fff;
-        font-size: 20px;
-        margin-right: 20px;
-        cursor: pointer
-    }
-    
-    .social-twitter {
-        background-color: #55acee
-    }
-    
-    .social-facebook {
-        background-color: #3b5999
-    }
-    
-    .social-linkedin {
-        background-color: #0077B5
-    }
-    
-    .social-google {
-        background-color: #dd4b39
-    }
-    
-    .social-instagram {
-        background-color: #dd4b39
-    }
-    
-    .social-icon i {
-        transition: 0.4s all
-    }
-    
-    .social-icon:hover i {
-        transform: scale(1.4)
-    }
+  .social-twitter {
+    background-color: #55acee;
+  }
 
- }
+  .social-facebook {
+    background-color: #3b5999;
+  }
 
- 
+  .social-linkedin {
+    background-color: #0077b5;
+  }
 
+  .social-google {
+    background-color: #dd4b39;
+  }
+
+  .social-instagram {
+    background-color: #dd4b39;
+  }
+
+  .social-icon i {
+    transition: 0.4s all;
+  }
+
+  .social-icon:hover i {
+    transform: scale(1.4);
+  }
+}
 
 .validation-error {
-    color: red;
-    font-size: 15px;
-    display: block;
+  color: red;
+  font-size: 15px;
+  display: block;
 }
 
 .no-display {
-    display: none;
+  display: none;
 }
 
- 
+.buyContent {
+  display: none;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+
+  .buyDetails {
+    background-color: #fefefe;
+    padding: 20px;
+
+    .closeDiv:hover,
+    .closeDiv:focus {
+      text-decoration: none;
+      cursor: pointer;
+    }
+  }
+}
